--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,29 +1,29 @@
 {
-    "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#11450b",
-        "activityBar.background": "#11450b",
-        "activityBar.foreground": "#e7e7e7",
-        "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#5a68e5",
-        "activityBarBadge.foreground": "#e7e7e7",
-        "commandCenter.border": "#e7e7e799",
-        "panel.border": "#11450b",
-        "sash.hoverBorder": "#11450b",
-        "statusBar.background": "#061904",
-        "statusBar.border": "#061904",
-        "statusBar.debuggingBackground": "#170419",
-        "statusBar.debuggingBorder": "#170419",
-        "statusBar.debuggingForeground": "#e7e7e7",
-        "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#11450b",
-        "statusBarItem.remoteBackground": "#061904",
-        "statusBarItem.remoteForeground": "#e7e7e7",
-        "tab.activeBorder": "#11450b",
-        "titleBar.activeBackground": "#061904",
-        "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.border": "#061904",
-        "titleBar.inactiveBackground": "#06190499",
-        "titleBar.inactiveForeground": "#e7e7e799"
-    },
-    "peacock.color": "#061904"
+  "workbench.colorCustomizations": {
+    "activityBar.activeBackground": "#1b3136",
+    "activityBar.background": "#1b3136",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#954a87",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "commandCenter.border": "#e7e7e799",
+    "panel.border": "#1b3136",
+    "sash.hoverBorder": "#1b3136",
+    "statusBar.background": "#0a1214",
+    "statusBar.border": "#0a1214",
+    "statusBar.debuggingBackground": "#140c0a",
+    "statusBar.debuggingBorder": "#140c0a",
+    "statusBar.debuggingForeground": "#e7e7e7",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#1b3136",
+    "statusBarItem.remoteBackground": "#0a1214",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "tab.activeBorder": "#1b3136",
+    "titleBar.activeBackground": "#0a1214",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.border": "#0a1214",
+    "titleBar.inactiveBackground": "#0a121499",
+    "titleBar.inactiveForeground": "#e7e7e799"
+  },
+  "peacock.color": "#0a1214"
 }
